# Flask-Blog

./: .gitignore  Dockerfile  flaskblog.py  forms.py  notes.md  pyproject.toml  requirements.txt  run.py
Flask-Blog/: flaskblog.py
Flask-Blog/templates/: home.html  layout.html
flaskblog/: __init__.py  config.py  forms.py  models.py  routes.py
flaskblog/instance/: site.db
flaskblog/main/: routes.py
flaskblog/posts/: forms.py  routes.py
flaskblog/static/: main.css
flaskblog/templates/: account.html  create_post.html  home.html  layout.html  login.html  post.html  reset_request.html  reset_token.html  user_posts.html
flaskblog/templates/errors/: 403.html  404.html  500.html
flaskblog/users/: forms.py  routes.py  utils.py
instance/: site.db
personal-references/: bcrypt-terminal-commands.md  checkbox.md  itsdangerous-terminal-cmds.md  notes.md  pagination-terminal-commands.md
templates/: about.html  layout.html
