[tool.poetry]
name = "flaskblog"
version = "0.1.0"
description = ""
authors = ["Granth Agarwal <heygranth@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
argcomplete = "3.5.1"
black = "24.10.0"
blinker = "1.8.2"
certifi = "2024.8.30"
charset-normalizer = "3.4.0"
click = "8.1.7"
colorama = "0.4.6"
dnspython = "2.7.0"
email-validator = "2.2.0"
flask = "3.0.3"
flask-sqlalchemy = "3.1.1"
flask-wtf = "1.2.2"
greenlet = "3.1.1"
idna = "3.10"
itsdangerous = "2.2.0"
jinja2 = "3.1.4"
lorem = "0.1.1"
markupsafe = "3.0.2"
mypy-extensions = "1.0.0"
packaging = "24.1"
pathspec = "0.12.1"
pipx = "1.7.1"
platformdirs = "4.3.6"
python-dotenv = "1.0.1"
requests = "2.32.3"
sqlalchemy = "2.0.36"
typing-extensions = "4.12.2"
urllib3 = "2.2.3"
userpath = "1.9.2"
werkzeug = "3.0.6"
wtforms = "3.2.1"
bcrypt = "4.2.1"
build = "1.2.2.post1"
cachecontrol = "0.14.1"
cffi = "1.17.1"
cleo = "2.1.0"
crashtest = "0.4.1"
cryptography = "44.0.0"
distlib = "0.3.9"
dulwich = "0.21.7"
fastjsonschema = "2.21.1"
filelock = "3.16.1"
flask-bcrypt = "1.0.1"
flask-login = "0.6.3"
installer = "0.7.0"
jaraco-classes = "3.4.0"
jeepney = "0.8.0"
keyring = "24.3.1"
more-itertools = "10.5.0"
msgpack = "1.1.0"
pexpect = "4.9.0"
pkginfo = "1.12.0"
poetry = "1.8.5"
poetry-core = "1.9.1"
poetry-plugin-export = "1.8.0"
ptyprocess = "0.7.0"
pycparser = "2.22"
pyproject-hooks = "1.2.0"
rapidfuzz = "3.10.1"
requests-toolbelt = "1.0.0"
secretstorage = "3.3.3"
shellingham = "1.5.4"
tomlkit = "0.13.2"
trove-classifiers = "2024.10.21.16"
virtualenv = "20.28.0"
pillow = "11.0.0"
flask-mail = "0.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

#poetry add $(cat requirements.txt)